fix: 修复偶尔会卡死的情况
